--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -123,15 +123,15 @@ jobs:
         run: cargo build -p voicevox_core_c_api -vv --features ${{ matrix.features }}, --target ${{ matrix.target }} --release
         env:
           ORT_USE_CUDA: ${{ matrix.use_cuda }}
-      # - name: build voicevox_core_python_api
-      #   id: build-voicevox-core-python-api
-      #   shell: bash
-      #   run: |
-      #     pip install -r ./crates/voicevox_core_python_api/requirements.txt
-      #     maturin build --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --features ${{ matrix.features }}, --target ${{ matrix.target }} --release
-      #     echo "whl=$(find ./target/wheels -type f)" >> "$GITHUB_OUTPUT"
-      #   env:
-      #     ORT_USE_CUDA: ${{ matrix.use_cuda }}
+      - name: build voicevox_core_python_api
+        id: build-voicevox-core-python-api
+        shell: bash
+        run: |
+          pip install -r ./crates/voicevox_core_python_api/requirements.txt
+          maturin build --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --features ${{ matrix.features }}, --target ${{ matrix.target }} --release
+          echo "whl=$(find ./target/wheels -type f)" >> "$GITHUB_OUTPUT"
+        env:
+          ORT_USE_CUDA: ${{ matrix.use_cuda }}
       - name: Set ASSET_NAME env var
         shell: bash
         run: echo "ASSET_NAME=voicevox_core-${{ matrix.artifact_name }}-${{ env.VERSION }}" >> "$GITHUB_ENV"
@@ -174,15 +174,15 @@ jobs:
           files: |-
             ${{ env.ASSET_NAME }}.zip
           target_commitish: ${{ github.sha }}
-      # - name: Upload Python whl to Release
-      #   if: env.VERSION != 'DEBUG' && env.SKIP_UPLOADING_RELEASE_ASSET == '0'
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     prerelease: true
-      #     tag_name: ${{ env.VERSION }}
-      #     files: |-
-      #       ${{ steps.build-voicevox-core-python-api.outputs.whl }}
-      #     target_commitish: ${{ github.sha }}
+      - name: Upload Python whl to Release
+        if: env.VERSION != 'DEBUG' && env.SKIP_UPLOADING_RELEASE_ASSET == '0'
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          tag_name: ${{ env.VERSION }}
+          files: |-
+            ${{ steps.build-voicevox-core-python-api.outputs.whl }}
+          target_commitish: ${{ github.sha }}
   deploy_downloader:
     runs-on: ubuntu-latest
     steps:
