--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -122,87 +122,87 @@ jobs:
       - name: Assert these header files are same
         run: diff -u --color=always ./voicevox_core_{1,2}.h
 
-#  build-unix-cpp-example:
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        include:
-#          - os: macos-latest
-#            artifact_name: osx-x64-cpu-cpp-shared
-#          - os: ubuntu-latest
-#            artifact_name: linux-x64-cpu-cpp-shared
-#    runs-on: ${{ matrix.os }}
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up Rust
-#        uses: ./.github/actions/rust-toolchain-from-file
-#      - name: Install cargo-binstall
-#        uses: taiki-e/install-action@cargo-binstall
-#      - name: Install cbindgen
-#        uses: ./.github/actions/cargo-binstall-cbindgen
-#      - name: build voicevox_core_c_api
-#        run: cargo build -p voicevox_core_c_api -vv
-#      - name: voicevox_core.hを生成
-#        run: cbindgen --crate voicevox_core_c_api -o ./example/cpp/unix/voicevox_core/voicevox_core.h
-#      - name: 必要なfileをunix用exampleのディレクトリに移動させる
-#        run: |
-#          mkdir -p example/cpp/unix/voicevox_core/
-#          cp -v target/debug/libvoicevox_core.{so,dylib} example/cpp/unix/voicevox_core/ || true
-#          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* example/cpp/unix/voicevox_core/ || true
-#          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib example/cpp/unix/voicevox_core/ || true
-#
-#      - if: startsWith(matrix.os, 'mac')
-#        uses: jwlawson/actions-setup-cmake@v1.13
-#      - name: Install build dependencies
-#        if: startsWith(matrix.os, 'ubuntu')
-#        shell: bash
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install -y cmake
-#      - name: Build
-#        shell: bash
-#        run: |
-#          cd example/cpp/unix
-#          cmake -S . -B build
-#          cmake --build build
+  build-unix-cpp-example:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+            artifact_name: osx-x64-cpu-cpp-shared
+          - os: ubuntu-latest
+            artifact_name: linux-x64-cpu-cpp-shared
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Rust
+        uses: ./.github/actions/rust-toolchain-from-file
+      - name: Install cargo-binstall
+        uses: taiki-e/install-action@cargo-binstall
+      - name: Install cbindgen
+        uses: ./.github/actions/cargo-binstall-cbindgen
+      - name: build voicevox_core_c_api
+        run: cargo build -p voicevox_core_c_api -vv
+      - name: voicevox_core.hを生成
+        run: cbindgen --crate voicevox_core_c_api -o ./example/cpp/unix/voicevox_core/voicevox_core.h
+      - name: 必要なfileをunix用exampleのディレクトリに移動させる
+        run: |
+          mkdir -p example/cpp/unix/voicevox_core/
+          cp -v target/debug/libvoicevox_core.{so,dylib} example/cpp/unix/voicevox_core/ || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* example/cpp/unix/voicevox_core/ || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib example/cpp/unix/voicevox_core/ || true
 
-#  build-python-api:
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        include:
-#          - os: windows-latest
-#          - os: macos-latest
-#          - os: ubuntu-latest
-#    runs-on: ${{ matrix.os }}
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up Python 3.8
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: "3.8"
-#      - name: Set up Rust
-#        uses: ./.github/actions/rust-toolchain-from-file
-#      - name: venv作成
-#        uses: ./.github/actions/create-venv
-#      - shell: bash
-#        run: pip install -r ./crates/voicevox_core_python_api/requirements.txt
-#      - shell: bash
-#        run: cargo build -p voicevox_core_c_api -vv
-#      - shell: bash
-#        run: maturin build --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
-#      - shell: bash
-#        run: maturin develop --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
-#      - name: 必要なDLLをカレントディレクトリにコピー
-#        run: |
-#          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/onnxruntime.dll . || true
-#          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* . || true
-#          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib . || true
-#      - name: '`maturin develop`でインストールした`voicevox_core_python_api`を実行'
-#        shell: python
-#        run: |
-#          import voicevox_core
-#          print(voicevox_core)
+      - if: startsWith(matrix.os, 'mac')
+        uses: jwlawson/actions-setup-cmake@v1.13
+      - name: Install build dependencies
+        if: startsWith(matrix.os, 'ubuntu')
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake
+      - name: Build
+        shell: bash
+        run: |
+          cd example/cpp/unix
+          cmake -S . -B build
+          cmake --build build
+
+  build-python-api:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: windows-latest
+          - os: macos-latest
+          - os: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
+      - name: Set up Rust
+        uses: ./.github/actions/rust-toolchain-from-file
+      - name: venv作成
+        uses: ./.github/actions/create-venv
+      - shell: bash
+        run: pip install -r ./crates/voicevox_core_python_api/requirements.txt
+      - shell: bash
+        run: cargo build -p voicevox_core_c_api -vv
+      - shell: bash
+        run: maturin build --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
+      - shell: bash
+        run: maturin develop --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
+      - name: 必要なDLLをカレントディレクトリにコピー
+        run: |
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/onnxruntime.dll . || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* . || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib . || true
+      - name: '`maturin develop`でインストールした`voicevox_core_python_api`を実行'
+        shell: python
+        run: |
+          import voicevox_core
+          print(voicevox_core)
 
 env:
   CARGO_TERM_COLOR: always
