--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -114,17 +114,17 @@ jobs:
         if: ${{ env.VERSION != 'DEBUG' }}
         shell: bash
         run: |
-          cargo set-version "$VERSION" --exclude voicevox_core_python_api --exclude xtask
-          cargo set-version "$VERSION+"${{ matrix.whl_local_version }} -p voicevox_core_python_api
-      - name: generate voicevox_core.h
+          cargo set-version "$VERSION" --exclude sharevox_core_python_api --exclude xtask
+          cargo set-version "$VERSION+"${{ matrix.whl_local_version }} -p sharevox_core_python_api
+      - name: generate sharevox_core.h
         shell: bash
-        run: cbindgen --crate voicevox_core_c_api -o ./voicevox_core.h
-      - name: build voicevox_core_c_api
-        run: cargo build -p voicevox_core_c_api -vv --features ${{ matrix.features }}, --target ${{ matrix.target }} --release
+        run: cbindgen --crate sharevox_core_c_api -o ./sharevox_core.h
+      - name: build sharevox_core_c_api
+        run: cargo build -p sharevox_core_c_api -vv --features ${{ matrix.features }}, --target ${{ matrix.target }} --release
         env:
           ORT_USE_CUDA: ${{ matrix.use_cuda }}
-      - name: build voicevox_core_python_api
-        id: build-voicevox-core-python-api
+      - name: build sharevox_core_python_api
+        id: build-sharevox-core-python-api
         shell: bash
         run: |
           pip install -r ./crates/voicevox_core_python_api/requirements.txt
@@ -134,14 +134,14 @@ jobs:
           ORT_USE_CUDA: ${{ matrix.use_cuda }}
       - name: Set ASSET_NAME env var
         shell: bash
-        run: echo "ASSET_NAME=voicevox_core-${{ matrix.artifact_name }}-${{ env.VERSION }}" >> "$GITHUB_ENV"
+        run: echo "ASSET_NAME=sharevox_core-${{ matrix.artifact_name }}-${{ env.VERSION }}" >> "$GITHUB_ENV"
       - name: Organize artifact
         shell: bash
         run: |
           mkdir -p "artifact/${{ env.ASSET_NAME }}"
-          cp -v voicevox_core.h "artifact/${{ env.ASSET_NAME }}"
-          cp -v target/${{ matrix.target }}/release/*voicevox_core.{dll,so,dylib} "artifact/${{ env.ASSET_NAME }}" || true
-          cp -v target/${{ matrix.target }}/release/voicevox_core.dll.lib "artifact/${{ env.ASSET_NAME }}/voicevox_core.lib" || true
+          cp -v sharevox_core.h "artifact/${{ env.ASSET_NAME }}"
+          cp -v target/${{ matrix.target }}/release/*sharevox_core.{dll,so,dylib} "artifact/${{ env.ASSET_NAME }}" || true
+          cp -v target/${{ matrix.target }}/release/sharevox_core.dll.lib "artifact/${{ env.ASSET_NAME }}/sharevox_core.lib" || true
           cp -v -n target/${{ matrix.target }}/release/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/*.{dll,so.*,so,dylib} "artifact/${{ env.ASSET_NAME }}" || true
           # libonnxruntimeについてはバージョン付のshared libraryを使用するためバージョンがついてないものを削除する
           rm -f artifact/${{ env.ASSET_NAME }}/libonnxruntime.{so,dylib}
@@ -151,7 +151,7 @@ jobs:
         if: startsWith(matrix.os, 'windows') && github.event.inputs.code_signing == 'true'
         shell: bash
         run: |
-          bash build_util/codesign.bash "artifact/${{ env.ASSET_NAME }}/voicevox_core.dll"
+          bash build_util/codesign.bash "artifact/${{ env.ASSET_NAME }}/sharevox_core.dll"
         env:
           CERT_BASE64: ${{ secrets.CERT_BASE64 }}
           CERT_PASSWORD: ${{ secrets.CERT_PASSWORD }}
@@ -181,7 +181,7 @@ jobs:
           prerelease: true
           tag_name: ${{ env.VERSION }}
           files: |-
-            ${{ steps.build-voicevox-core-python-api.outputs.whl }}
+            ${{ steps.build-sharevox-core-python-api.outputs.whl }}
           target_commitish: ${{ github.sha }}
   deploy_downloader:
     runs-on: ubuntu-latest
