--- a/.github/workflows/generate_document.yml
+++ b/.github/workflows/generate_document.yml
@@ -26,7 +26,7 @@ jobs:
       - name: pip install
         run: pip install -r ./crates/voicevox_core_python_api/requirements.txt
       - name: Generate C header file
-        run: cbindgen --crate voicevox_core_c_api -o ./docs/apis/c_api/doxygen/voicevox_core.h
+        run: cbindgen --crate sharevox_core_c_api -o ./docs/apis/c_api/doxygen/sharevox_core.h
       - name: mkdir public
         run: mkdir -p public/apis/c_api
       - name: cp docs/apis/index.html
@@ -35,9 +35,9 @@ jobs:
         uses: mattnotmitt/doxygen-action@v1.9.4
         with:
           working-directory: "docs/apis/c_api/doxygen"
-      - name: Build voicevox_core_python_api
+      - name: Build sharevox_core_python_api
         run: |
-          cargo build -p voicevox_core_c_api -vv
+          cargo build -p sharevox_core_c_api -vv
           maturin develop --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
       - name: Generate Sphinx document
         run: sphinx-build docs/apis/python_api public/apis/python_api
