--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,12 +115,12 @@ jobs:
         uses: taiki-e/install-action@cargo-binstall
       - name: Install cbindgen
         uses: ./.github/actions/cargo-binstall-cbindgen
-      - name: Generate voicevox_core_1.h
-        run: cbindgen --crate voicevox_core_c_api -o ./voicevox_core_1.h
-      - name: Generate voicevox_core_2.h
-        run: cargo xtask generate-c-header -o ./voicevox_core_2.h
+      - name: Generate sharevox_core_1.h
+        run: cbindgen --crate sharevox_core_c_api -o ./sharevox_core_1.h
+      - name: Generate sharevox_core_2.h
+        run: cargo xtask generate-c-header -o ./sharevox_core_2.h
       - name: Assert these header files are same
-        run: diff -u --color=always ./voicevox_core_{1,2}.h
+        run: diff -u --color=always ./sharevox_core_{1,2}.h
 
   build-unix-cpp-example:
     strategy:
@@ -140,16 +140,16 @@ jobs:
         uses: taiki-e/install-action@cargo-binstall
       - name: Install cbindgen
         uses: ./.github/actions/cargo-binstall-cbindgen
-      - name: build voicevox_core_c_api
-        run: cargo build -p voicevox_core_c_api -vv
-      - name: voicevox_core.hを生成
-        run: cbindgen --crate voicevox_core_c_api -o ./example/cpp/unix/voicevox_core/voicevox_core.h
+      - name: build sharevox_core_c_api
+        run: cargo build -p sharevox_core_c_api -vv
+      - name: sharevox_core.hを生成
+        run: cbindgen --crate sharevox_core_c_api -o ./example/cpp/unix/sharevox_core/sharevox_core.h
       - name: 必要なfileをunix用exampleのディレクトリに移動させる
         run: |
-          mkdir -p example/cpp/unix/voicevox_core/
-          cp -v target/debug/libvoicevox_core.{so,dylib} example/cpp/unix/voicevox_core/ || true
-          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* example/cpp/unix/voicevox_core/ || true
-          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib example/cpp/unix/voicevox_core/ || true
+          mkdir -p example/cpp/unix/sharevox_core/
+          cp -v target/debug/libsharevox_core.{so,dylib} example/cpp/unix/sharevox_core/ || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* example/cpp/unix/sharevox_core/ || true
+          cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib example/cpp/unix/sharevox_core/ || true
 
       - if: startsWith(matrix.os, 'mac')
         uses: jwlawson/actions-setup-cmake@v1.13
@@ -188,7 +188,7 @@ jobs:
       - shell: bash
         run: pip install -r ./crates/voicevox_core_python_api/requirements.txt
       - shell: bash
-        run: cargo build -p voicevox_core_c_api -vv
+        run: cargo build -p sharevox_core_c_api -vv
       - shell: bash
         run: maturin build --manifest-path ./crates/voicevox_core_python_api/Cargo.toml --locked
       - shell: bash
@@ -198,11 +198,11 @@ jobs:
           cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/onnxruntime.dll . || true
           cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.so.* . || true
           cp -v target/debug/build/onnxruntime-sys-*/out/onnxruntime_*/onnxruntime-*/lib/libonnxruntime.*.dylib . || true
-      - name: '`maturin develop`でインストールした`voicevox_core_python_api`を実行'
+      - name: '`maturin develop`でインストールした`sharevox_core_python_api`を実行'
         shell: python
         run: |
-          import voicevox_core
-          print(voicevox_core)
+          import sharevox_core
+          print(sharevox_core)
 
 env:
   CARGO_TERM_COLOR: always
