--- a/crates/voicevox_core_c_api/Cargo.toml
+++ b/crates/voicevox_core_c_api/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "voicevox_core_c_api"
+name = "sharevox_core_c_api"
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
 [lib]
-name = "voicevox_core"
+name = "sharevox_core"
 crate-type = ["cdylib"]
 
 [features]
