--- a/crates/voicevox_core_python_api/pyproject.toml
+++ b/crates/voicevox_core_python_api/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "voicevox_core"
+name = "sharevox_core"
 requires-python = ">=3.8"
 dependencies = ["numpy", "pydantic>=1.9.2,<2"]
 
