--- a/example/cpp/unix/CMakeLists.txt
+++ b/example/cpp/unix/CMakeLists.txt
@@ -6,8 +6,8 @@ add_executable(simple_tts simple_tts.cpp)
 set_property(TARGET simple_tts PROPERTY CXX_STANDARD 11)
 
 file(GLOB ONNXRUNTIME_SHARED_LIB ./libonnxruntime.so.* ./libonnxruntime.*.dylib)
-target_link_directories(simple_tts PRIVATE ./voicevox_core)
+target_link_directories(simple_tts PRIVATE ./sharevox_core)
 
 
-file(GLOB CORE_LIB ./voicevox_core/libvoicevox_core.so.* ./voicevox_core/libvoicevox_core.*.dylib)
-target_link_libraries(simple_tts voicevox_core)
+file(GLOB CORE_LIB ./sharevox_core/libsharevox_core.so.* ./sharevox_core/libsharevox_core.*.dylib)
+target_link_libraries(simple_tts sharevox_core)
