remove push and schedule trigger from update rust toolchain worflow

--- a/.github/workflows/update_rust_toolchain.yml
+++ b/.github/workflows/update_rust_toolchain.yml
@@ -1,10 +1,11 @@
 name: update rust toolchain
 on:
-  push:
-    branches:
-      - main
-  schedule:
-    - cron: "0 0 * * *"
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  # schedule:
+  #   - cron: "0 0 * * *"
 jobs:
   update-rust-toolchain:
     runs-on: ubuntu-latest
